--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,12 +21,20 @@ jobs:
     - name: Install dependencies
       run: |
         cd ModelNNFunctionKonfio
-        
 
-    - name: Package Lambda function
+    - name: Install dependencies
+      run: |
+        cd KonfioTesting
+
+    - name: Package Lambda function ModelNNFunctionKonfio
       run: |
         cd ModelNNFunctionKonfio
         zip -r ../ModelNNFunctionKonfio.zip .
+
+    - name: Package Lambda function KonfioTesting
+      run: |
+        cd KonfioTesting
+        zip -r ../KonfioTesting.zip .
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -35,6 +43,10 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
 
-    - name: Update Lambda function
+    - name: Update Lambda function ModelNNFunctionKonfio
       run: |
         aws lambda update-function-code --function-name ${{ secrets.AWS_LAMBDA_FUNCTION_NAME_001 }} --zip-file fileb://ModelNNFunctionKonfio.zip
+
+    - name: Update Lambda function KonfioTesting
+      run: |
+        aws lambda update-function-code --function-name ${{ secrets.AWS_LAMBDA_FUNCTION_NAME_002 }} --zip-file fileb://KonfioTesting.zip
